--- a/src/main/resources/com/lofidewanto/demo/client/Messages.properties
+++ b/src/main/resources/com/lofidewanto/demo/client/Messages.properties
@@ -1,22 +1,12 @@
 # LoadingMessagePopupPanel
 loadingMessage.message=Loading...
 
-app.title=MyWebApp
+app.title=Document Management with Confluence
 
-menu.text.1=Menu One
-menu.text.2=Menu Two
-menu.text.3=Menu Three
-menu.text.4=Menu Four
-
-button.search=Search
 button.update=Update
-button.filter=Filter
 
-first.tab=First Tab
-search.tab=Search Tab
-
-content.heading=Content
-
-name.suggest=Name
-date.from=From
-date.until=Until
+content.heading=Documents
+table.title=Title
+table.contentType=Content Type
+table.download=Download
+table.nodata=No Data
