--- a/src/main/resources/com/lofidewanto/demo/client/Messages.properties
+++ b/src/main/resources/com/lofidewanto/demo/client/Messages.properties
@@ -9,4 +9,5 @@ content.heading=Documents
 table.title=Title
 table.contentType=Content Type
 table.download=Download
+table.downloadButton=Download
 table.nodata=No Data
