Projekt is now running with Confluence.

--- a/src/main/resources/com/lofidewanto/demo/client/Messages.properties
+++ b/src/main/resources/com/lofidewanto/demo/client/Messages.properties
@@ -7,6 +7,7 @@ button.update=Update
 
 content.heading=Documents
 table.title=Title
+table.fileSize=Filesize
 table.contentType=Content Type
 table.download=Download
 table.downloadButton=Download
