add version and comment

--- a/src/main/resources/com/lofidewanto/demo/client/Messages.properties
+++ b/src/main/resources/com/lofidewanto/demo/client/Messages.properties
@@ -1,14 +1,15 @@
 # LoadingMessagePopupPanel
-loadingMessage.message=Loading...
+loadingMessage.message=Laden...
 
-app.title=Document Management with Confluence
+app.title=Dokumentendownload
 
 button.update=Update
 
-content.heading=Documents
-table.title=Title
-table.fileSize=Filesize
-table.contentType=Content Type
+content.heading=Dokumenten
+table.title=Titel
+table.fileSize=Filegröße
+table.contentType=Dateiformat
+table.version=Version
 table.download=Download
 table.downloadButton=Download
-table.nodata=No Data
+table.nodata=Keine Daten
