--- a/src/main/resources/com/lofidewanto/demo/client/Messages.properties
+++ b/src/main/resources/com/lofidewanto/demo/client/Messages.properties
@@ -5,7 +5,7 @@ app.title=Dokumentendownload
 
 button.update=Update
 
-content.heading=Dokumenten
+content.heading=Downloads
 table.title=Titel
 table.fileSize=Filegröße
 table.contentType=Dateiformat
